# aes

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/aesdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NEAES.cpp  NEAES.h
app/src/main/java/com/example/aesdemo/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/aesdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
